--- a/BattleTowers.csproj
+++ b/BattleTowers.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/3.2.3">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
+    <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 </Project>
