--- a/BattleTowers.csproj
+++ b/BattleTowers.csproj
@@ -2,6 +2,6 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>8</LangVersion>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 </Project>
